# llm-framework-core

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docs_macros.py  index.html  index.md  llms-full.txt  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: copilot-instructions.md
.github/instructions/: workflow.instructions.md
.github/prompts/: codebase-audit.prompt.md
.github/scripts/: auto-tag.sh
.github/workflows/: auto-tag.yaml  ci.yaml  docs.yaml  release.yaml
api/config/: index.html  index.md
api/core/: index.html  index.md
api/extensions/: index.html  index.md
api/plugins/: index.html  index.md
api/tools/: index.html  index.md
docs/: environment-variables.md  index.md  patterns.md  pyproject.toml
docs/api/: config.md  core.md  extensions.md  plugins.md  tools.md
docs/getting-started/: installation.md  quickstart.md
environment-variables/: index.html  index.md
examples/: __init__.py  pyproject.toml
examples/advanced/: 10_rag.py  11_custom_mcp_server.py  13_history_buffer.py  14_cached_tool.py  17_auth_agent.py
examples/basics/: 01_hello_llm.py  02_basic_agent.py  03_local_tools.py  04_structured_output.py  05_guardrails.py  06_mcp_tools.py  07_approval.py  08_orchestrator.py  09_agent_as_tool.py
examples/chats/: 15_cli_agent.py  16_web_agent.py  18.1_web_auth_agent.py  18.2_web_oidc_agent.py
examples/chats/16_templates/: chat.html
examples/chats/18.1_templates/: login.html
examples/chats/18.2_templates/: chat.html  login.html
examples/mcp_servers/: memory_server.py
examples/specialized_agents/: researcher_agent.py
examples/tools/: memory.py  web_fetch.py
exemplars/: example-script.py  extension-class.py  guardrail-factory.py  mcp-server.py  optional-dep.py  tool-definition.py  unit-test-agent.py  unit-test-extension.py  unit-test-tool.py  vector-backend.py
getting-started/installation/: index.html  index.md
getting-started/quickstart/: index.html  index.md
llm_framework/: __init__.py  _env.py  _optional.py  observability.py
llm_framework/core/: __init__.py  agent.py  history.py  llm.py  observability.py  orchestrator.py  protocols.py  tools.py
llm_framework/extensions/: __init__.py  guardrails.py  mcp.py  memory.py
llm_framework/extensions/auth/: __init__.py  _context.py  backends.py  oidc.py  providers.py
llm_framework/extensions/auth/backends/: __init__.py  file.py  memory.py
llm_framework/extensions/auth/providers/: __init__.py  oidc.py  static.py
llm_framework/extensions/mcp/: __init__.py  client.py  server.py
llm_framework/extensions/rag/: __init__.py  _converter.py
llm_framework/extensions/rag/vector_store/: __init__.py  qdrant.py  sqlite.py
llm_framework/mcp_servers/: knowledge_server.py  memory_server.py
llm_framework/tools/: __init__.py  builtins.py  calculator.py  clock.py  filesystem.py  memory.py  shell.py  web_fetch.py
patterns/: index.html  index.md
search/: search_index.json
tests/: conftest.py  test_packaging.py
tests/core/: test_auth.py  test_cached_tool.py  test_guardrails.py  test_history.py  test_memory.py  test_orchestrator.py  test_rag.py  test_rag_formats.py  test_sqlite_backend.py  test_structured_output.py
tests/integration/: README.md  test_guardrails_live.py  test_memory_live.py  test_orchestrator_live.py  test_rag_live.py  test_structured_output_live.py
tests/unit/: test_agent.py  test_agent_loop.py  test_auth.py  test_cached_tool.py  test_guardrails.py  test_history.py  test_memory_store.py  test_observability.py  test_optional.py  test_orchestrator.py  test_rag_formats.py  test_sqlite_backend.py  test_tools_calculator.py  test_tools_filesystem.py  test_tools_memory.py  test_tools_schema.py  test_tools_shell.py
tools/: diagnose.sh
