[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "llm-framework"
dynamic = ["version"]
description = "Minimal Python library for building LLM-powered agents with a low dependency footprint."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "python-dotenv>=1.2.2"]

[project.optional-dependencies]
# Library extras — extend the core library; install only what you need
rag = ["pypdf>=6.12.2", "semantic-text-splitter>=0.30.1", "sqlite-vec>=0.1.9"]
qdrant = ["qdrant-client>=1.17.1"]
oidc = ["PyJWT[crypto]>=2.9.0"]
# Full-featured library install; recommended for most users
std = ["llm-framework[rag,oidc]"]

[project.scripts]
knowledge-server = "llm_framework.mcp_servers.knowledge_server:main"
memory-server = "llm_framework.mcp_servers.memory_server:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["llm_framework"]
