[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "llm-framework"
dynamic = ["version"]
description = "Minimal Python library for building LLM-powered agents with a low dependency footprint."
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
keywords = ["llm", "agent", "mcp", "rag", "openai-compatible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "defusedxml>=0.7.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/iciouss/llm-framework-core"
Documentation = "https://iciouss.github.io/llm-framework-core/"
Issues = "https://github.com/iciouss/llm-framework-core/issues"

[project.optional-dependencies]
# Library extras — extend the core library; install only what you need
mcp = ["fastapi>=0.115.0"]
rag = ["pypdf>=6.12.2", "semantic-text-splitter>=0.30.1", "sqlite-vec>=0.1.9", "defusedxml>=0.7.1"]
qdrant = ["qdrant-client>=1.17.1"]
oidc = ["PyJWT[crypto]>=2.9.0"]
# Server entry-point scripts (knowledge-server, memory-server)
server = ["uvicorn>=0.34.0", "llm-framework[mcp]"]
# Full-featured library install; recommended for most users
std = ["llm-framework[rag,oidc]"]

[project.scripts]
knowledge-server = "llm_framework.mcp_servers.knowledge_server:main"
memory-server = "llm_framework.mcp_servers.memory_server:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["llm_framework"]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "deptry>=0.25.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
    "types-defusedxml>=0.7.0.20260504",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.mypy]
# CI runs mypy on the library only; tests are exercised by pytest.
# Missing stubs on third-party packages we don't control: ignore with overrides below.
python_version = "3.13"
files = ["llm_framework"]

[[tool.mypy.overrides]]
# sqlite-vec is a C extension with no published stubs.
module = "sqlite_vec"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# uvicorn ships no py.typed marker; only the mcp_servers/* entry-point scripts import it.
# Those scripts are pending a move to examples/ — revisit then.
module = "uvicorn"
ignore_missing_imports = true

[tool.deptry.package_module_name_map]
"python-dotenv" = "dotenv"
"PyJWT" = "jwt"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests"]
markers = [
    "integration: requires a live LLM endpoint and env vars (LLM_BASE_URL, LLM_API_KEY, LLM_MODEL)",
]
