[project]
name = "llm-framework-docs"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-llmstxt>=0.5.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.4",
    "llm-framework[std]",
]

[tool.uv.sources]
llm-framework = { path = "..", editable = true }
