[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-framework-examples"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
    "llm-framework[std]",
]

[project.scripts]
knowledge-server = "mcp_servers.knowledge_server:main"
memory-server = "mcp_servers.memory_server:main"

[tool.hatch.build.targets.wheel]
packages = ["tools", "mcp_servers", "chats", "advanced", "basics", "specialized_agents"]

[tool.uv.sources]
llm-framework = { path = ".." }
